2008-05-29  Andy Buckley  <andy@insectnation.org>

	* distcheck compatibility fixes and autotools tweaks.

2008-05-28  Andy Buckley  <andy@insectnation.org>

	* Converted FastJet to use Boost smart_ptr for its plugin
	handling, to solve double-delete errors stemming from the heap
	cloning of projections.

	* Added (a subset of) Boost headers, particularly the smart
	pointers.

2008-05-24  Andy Buckley  <andy@insectnation.org>

	* Added autopackage spec files.

	* Merged these changes into the trunk.

	* Added a registerClonedProjection(...) method to
	ProjectionHandler: this is needed so that cloned projections will
	have valid pointer entries in the ProjectHandler repository.

	* Added clone() methods to all projections (need to use this,
	since the templated "new PROJ(proj)" approach to cloning can't
	handle object polymorphism.

2008-05-19  Andy Buckley  <andy@insectnation.org>

	* Moved projection-applying functions into ProjectionApplier base
	class (from which Projection and Analysis both derive).

	* Added Rivet-specific exceptions in place of std::runtime_error.

	* Removed unused HepML reference files.

	* Added error handling for requested analyses with wrong case
	convention / missing name.

2008-05-15  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* New analysis PDG_Hadron_Multiplicities

	* flat2aida converter

2008-05-15  Andy Buckley  <andy@insectnation.org>

	* Removed unused mysterious Perl scripts!

	* Added RivetGun.HepMC logging of HepMC event details.

2008-05-14  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* New analysis DELPHI_1995_S3137023. This analysis contains
	the xp spectra of Xi+- and Sigma(1385)+-.

2008-05-13  Andy Buckley  <andy@insectnation.org>

	* Improved logging interface: log levels are now integers (for
	cross-library compatibility and level setting also applies to
	existing loggers.

2008-05-09  Andy Buckley  <andy@insectnation.org>

	* Improvements to robustness of ROOT checks.

	* Added --version flag on config scripts and rivetgun.